k8s/flask-analytics-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flask-analytics-deployment
  namespace: todolist
  labels:
    app: flask-analytics
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-analytics
  template:
    metadata:
      labels:
        app: flask-analytics
    spec:
      containers:
      - name: flask-analytics
        image: erenozcan17/flask_analytics:v3.1
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: 100m
            memory: 256Mi
          limits:
            cpu: 500m
            memory: 512Mi
