k8s/blackbox-exporter-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blackbox-exporter-deployment
  namespace: todolist
  labels:
    app: blackbox-exporter
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blackbox-exporter
  template:
    metadata:
      labels:
        app: blackbox-exporter
    spec:
      containers:
      - name: blackbox-exporter
        image: prom/blackbox-exporter:latest
        ports:
        - containerPort: 9115
        args:
          - '--config.file=/etc/blackbox_exporter/config.yml'
        volumeMounts:
        - name: blackbox-config-volume
          mountPath: /etc/blackbox_exporter/
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 200m
            memory: 200Mi
      volumes:
      - name: blackbox-config-volume
        configMap:
          defaultMode: 420
          name: blackbox-config
---
apiVersion: v1
kind: Service
metadata:
  name: blackbox-exporter-service
  namespace: todolist
  labels:
    app: blackbox-exporter
spec:
  selector:
    app: blackbox-exporter
  ports:
  - name: http
    port: 9115
    targetPort: 9115
  type: ClusterIP
