k8s/flask-analytics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flask-analytics-service
  namespace: todolist
  labels:
    app: flask-analytics
spec:
  selector:
    app: flask-analytics
  ports:
  - name: http
    port: 5000
    targetPort: 5000
    protocol: TCP
  type: ClusterIP
