k8s/go-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-api-service
  namespace: todolist
spec:
  selector:
    app: go-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
