k8s/go-api.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: go-api-deployment
  namespace: todolist
  labels:
    app: go-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: go-api
  template:
    metadata:
      labels:
        app: go-api
    spec:
      containers:
        - name: go-api
          image: erenozcan17/go_backend:v4.1
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: go-api-service
  namespace: todolist
spec:
  selector:
    app: go-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
  type: ClusterIP
