k8s/mysql-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-exporter-service
  namespace: todolist
  labels:
    app: mysql-exporter
spec:
  selector:
    app: mysql-exporter
  ports:
    - protocol: TCP
      port: 9104
      targetPort: 9104
  type: ClusterIP
